src/tests/snapshots/hebi__tests__loops__for_print_odd_0_to_9.snap
---
source: src/tests/loops.rs
expression: snapshot
---
# Modules:


# Input:
for i in 0..10:
  if i % 2 == 0: continue
  print i


# Result (success):
false

# Stdout:
1
3
5
7
9


